--- a/popup.html
+++ b/popup.html
@@ -189,7 +189,7 @@
   </div>
 
   <!-- Chart.js UMD build (local file for extension compatibility) -->
-  <script src="chart.umd.min.js"></script>
+  <script src="chart.umd.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
